--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.18.2",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.3",
     "tailwindcss": "^3.2.7"
