--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@/components/*": ["src/components/*"],
 
-      "@/data/*": ["src/data/*"]
+      "@/data/*": ["src/data/*"],
+      "@/layout/*": ["src/layout/*"]
     }
   }
 }
